force-app/main/default/objects/Activity/fields/LLC_BI__isTemplate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__isTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will show the Maintenance System that the task is a template task for Maintenance Subtasks.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>