force-app/main/default/objects/Activity/fields/LLC_BI__SubType__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SubType__c</fullName>
    <description>This field is not required. This field is manually populated. This field describes the current Maintenance type for a particluar Maintenance Task. It is dependent on the LLC_BI__Maintenance_Type__c (Maintenance Category)</description>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Maintenance_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Credit Limit Change</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Add Authorized User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>